mdapioutput/objects/CustomerProfile__c.object
<CustomObject>
    <label>Customer Profile</label>
    <nameField>
        <displayFormat>CP{000000000}</displayFormat>
        <label>Customer Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>AssignedDealership_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Dealership</label>
        <referenceTo>Dealership__c</referenceTo>
        <relationshipLabel>Customer Profiles</relationshipLabel>
        <relationshipName>CustomerProfiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingPostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingStreet__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerGlobalId__c</fullName>
        <externalId>true</externalId>
        <label>Customer Global Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerProfileGlobalExternalId__c</fullName>
        <externalId>true</externalId>
        <label>Customer Profile Global External Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Profiles</relationshipLabel>
        <relationshipName>Customer_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalaryOrientation__c</fullName>
        <label>Salary Orientation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SyncStatus__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Pending for Sync</fullName>
                </value>
                <value>
                    <fullName>Unsynced</fullName>
                </value>
                <value>
                    <fullName>Deactivated</fullName>
                </value>
                <value>
                    <fullName>Pending for Unsync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AssignedDealership_ref__c</columns>
        <columns>Customer_ref__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>SyncStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>